<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sosa.shbeta.InscriptionActivity"
    android:background="#FFB644">

    <!--SPINNER-->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:padding="60dp" />

    <!--IMAGE PAGE DE REGISTER [LOGO DE L APPLICATION]-->
    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription"
        android:layout_width="91dp"
        android:id="@+id/imageView4"
        android:layout_height="92dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp" />

    <!--FORMULAIRE D INSCRIPTION-->
    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <!--CHAMP PRENOM-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_prenom"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--CHAMP NOM-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nom"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--CHAMP EMAIL-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--CHAMP MDP-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--CHAMP CONFIRMER-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_marginBottom="30dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--BOUTON D INSCRIPTION-->
        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:textColor="#fff"
            tools:textSize="24sp"
            android:elevation="1dp"
            android:backgroundTint="#ff7b00"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.43"
            android:height="60dp"
            tools:ignore="InefficientWeight"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <!--FOOTER-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/footer"
            android:layout_below="@+id/linlay_actualite"
            android:layout_height="40dp"
            android:paddingTop="6dp"
            android:text="@string/footer"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="#D14B00"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>