<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sosa.shbeta.ConnexionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFB644">

    <!--SPINNER-->
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:padding="60dp" />

    <!--IMAGE PAGE DE LOGIN [LOGO DE L APPLICATION]-->
    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription"
        android:layout_width="179dp"
        android:id="@+id/imageView4"
        android:layout_height="193dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"/>

    <!--FORMULAIRE DE CONNEXION-->
    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <!--CHAMP EMAIL-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <!--CHAMP MDP-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                tools:ignore="RtlHardcoded,RtlSymmetry"
                android:id="@+id/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:layout_marginBottom="30dp"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryDark" />
            <!--
                -->

        </android.support.design.widget.TextInputLayout>

        <!--BOUTON DE CONNEXION-->
        <Button
            style="?android:textAppearanceSmall"
            tools:ignore="InefficientWeight"
            tools:textSize="24sp"
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textColor="#fff"
            android:elevation="1dp"
            android:backgroundTint="#ff7b00"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.43"
            android:height="60dp"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

    <!--BOUTON D INSCRIPTION-->
    <Button
        style="?android:attr/borderlessButtonStyle"
        tools:ignore="HardcodedText,InefficientWeight"
        tools:textSize="18sp"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S\'inscrire"
        android:textColor="#ff7b00"
        android:elevation="0dp"
        android:backgroundTint="#FFB644"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp" />

    <!--FOOTER-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/footer"
            android:layout_below="@+id/linlay_actualite"
            android:layout_height="40dp"
            android:paddingTop="6dp"
            android:text="@string/footer"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="#D14B00"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>

</LinearLayout>
