<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sosa.shbeta.MenuActivity"
    tools:showIn="@layout/app_bar_menu"
    android:id="@+id/content_menu"
    android:scrollbars="vertical"
    android:background="#FFB644"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--MESSAGE DE BIENVENUE PERSONNALISE-->
        <TextView
            android:paddingLeft="24dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="36sp"
            android:id="@+id/txtvtest"
            android:textStyle="normal|bold"
            android:textColor="#D14B00"/>

        <!--MESSAGE DE BIENVUE-->
        <TextView
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@+id/txtvtest"
            android:textSize="54sp"
            android:textStyle="normal|bold"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textAlignment="center"
            android:textColor="#A43B00" />

        <!--TEXTE DESCRIPTIF-->
        <TextView
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/texte_descriptif_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDescHome"
            android:layout_below="@+id/textView"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textAlignment="textStart"
            android:textColor="#ED143F" />

        <!--CARROUSSEL-->
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPage"
            android:layout_width="wrap_content"
            android:layout_height="512dp"
            android:layout_below="@+id/textViewDescHome" />

        <!--VIE D'UN SIKH-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/viewPage"
            android:id="@+id/linlay_vie"
            android:background="@drawable/background_vie"
            android:clickable="false">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel1"
                android:id="@+id/iv_vie"
                android:paddingLeft="1dp"
                android:paddingTop="1dp"/>

            <TextView
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/vie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tv_vie"
            android:layout_below="@+id/viewPage"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textAlignment="viewStart"
            android:gravity="center_vertical"/>

        </LinearLayout>

        <!--BIOGRAPHIE-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linlay_bio"
            android:layout_below="@+id/linlay_vie"
            android:background="@drawable/background_bio">

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/bio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_bio"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical"  />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel2"
                android:id="@+id/iv_bio"
                android:paddingRight="1dp"
                android:paddingTop="1dp" />

        </LinearLayout>

        <!--HISTOIRE-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linlay_bio"
            android:id="@+id/linlay_histoire"
            android:background="@drawable/background_histoire">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel3"
                android:id="@+id/iv_histoire"
                android:paddingLeft="1dp"
                android:paddingTop="1dp" />

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/histoire"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_histoire"
                android:layout_below="@+id/linlay_bio"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textAlignment="viewStart"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!--TEMPLE-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linlay_temple"
            android:layout_below="@+id/linlay_histoire"
            android:background="@drawable/background_bio">

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/temple"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_temple"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical"  />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel1"
                android:id="@+id/iv_temple"
                android:paddingRight="1dp"
                android:paddingTop="1dp" />

        </LinearLayout>

        <!--FAQ-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linlay_faq"
            android:layout_below="@+id/linlay_temple"
            android:background="@drawable/background_histoire">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel2"
                android:id="@+id/iv_faq"
                android:paddingLeft="1dp"
                android:paddingTop="1dp" />

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/faq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_faq"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewStart"
                android:gravity="center_vertical"  />

        </LinearLayout>

        <!--QUIZZ-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linlay_quizz"
            android:layout_below="@+id/linlay_faq"
            android:background="@drawable/background_bio">

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/quizz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_quizz"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewEnd"
                android:gravity="center_vertical"  />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel3"
                android:id="@+id/iv_quizz"
                android:paddingRight="1dp"
                android:paddingTop="1dp" />

        </LinearLayout>

        <!--ACTUALITES-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linlay_actualite"
            android:layout_below="@+id/linlay_quizz"
            android:background="@drawable/background_actu">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/caroussel1"
                android:id="@+id/iv_actualite"
                android:paddingLeft="1dp"
                android:paddingTop="1dp" />

            <TextView
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/actualite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_actualite"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                android:textAlignment="viewStart"
                android:gravity="center_vertical"  />

        </LinearLayout>

        <!--FOOTER-->
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/footer"
            android:layout_below="@+id/linlay_actualite"
            android:layout_height="40dp"
            android:paddingTop="6dp"
            android:text="@string/footer"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="#D14B00"
            android:textAlignment="center"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</ScrollView>
